# Bmail

./: .gitignore  AddURL-Tests.cpp  BloomFilter-setter-test.cpp  BloomFilter.cpp  BloomFilter.h  BloomFilter_getters_tests.cpp  CMakeLists.txt  CheckURL-Tests.cpp  Dockerfile  Dockerfile.node  Input.cpp  Input.h  LoadFromFile-Tests.cpp  README.md  SaveToFile-Tests.cpp  Storage.cpp  Storage.h  docker-compose.yml  function-tests.cpp  init_filter_tests.cpp  init_input_tests.cpp  input.h  package-lock.json  package.json  url_input_tests.cpp
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/gradle/wrapper/: gradle-wrapper.properties
android_application/: settings.gradle.kts
android_application/app/: build.gradle.kts
android_application/app/src/main/: AndroidManifest.xml
android_application/gradle/: libs.versions.toml
android_application/gradle/wrapper/: gradle-wrapper.properties
client_side/: package-lock.json  package.json
client_side/public/: index.html
client_side/src/: App.js  ThemeContext.js  index.js
client_side/src/components/ButtonMailComposer/: ButtonMailComposer.js
client_side/src/components/Draft/: Draft.css  Draft.js
client_side/src/components/DraftMailComposer/: DraftMailComposer.js
client_side/src/components/Important/: Important.js
client_side/src/components/Inbox/: Inbox.css  Inbox.js
client_side/src/components/Labels/: LabelDelete.js  LabelDropdown.css  LabelDropdown.js  LabelEditor.js  LabelItem.js  LabelView.js  Labels.css  Labels.js  apiLabels.js
client_side/src/components/LiveSearchResult/: LiveSearchResult.css  LiveSearchResult.js
client_side/src/components/MailComposer/: MailComposer.css  MailComposer.js
client_side/src/pages/: HomeScreen.css  HomeScreen.js  Inbox.css  Inbox.js  LoginScreen.css  LoginScreen.js  MainScreen.css  MainScreen.js  SignupScreen.css  SignupScreen.js
config/: .env
data/: Blacklist.txt
src/: Add.cpp  Add.h  BloomFilter.cpp  BloomFilter.h  Check.cpp  Check.h  Client.py  Command.cpp  Command.h  Delete.cpp  Delete.h  Input.cpp  Input.h  Server.cpp  Storage.cpp  Storage.h  app.js  function-tests.cpp  main.cpp  server-tests.cpp
src/controllers/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/middleware/: auth.js
src/models/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/routes/: blacklist.js  labels.js  mails.js  tokens.js  users.js
src/services/: blacklist.js  labels.js  mails.js  tokens.js  users.js
wiki/: API Server.md  Android - end-to-end examples.md  Home.md  How to build and run.md  TCP server ‐ Bloom Filter.md  Web- end‐to‐end examples.md
(+139 files in other folders)
